--- a/Autheticator/appsettings.json
+++ b/Autheticator/appsettings.json
@@ -1,7 +1,9 @@
 {
-  "KafkaOptions": {
-    "Host": "localhost:29092",
-    "Topic": "test-topic"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
